--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <a class="sm-btn" id="to-inicio"><i class="fas fa-arrow-up text-white"></i></a>
     <section id="inicio">
         <div class="sm-background-inicio">
-            <div class="container position-relative">
-                <nav class="navbar navbar-expand-lg navbar-dark primary-color sm-nav">
+            <div id="sm-navv" class="sm-nav-position" style="z-index: 10;">
+                <nav class="container navbar navbar-expand-lg navbar-dark primary-color sm-nav w-100">
                     <img class="logo-navbar-mobile navbar-brand" src="img/logoBlanco.png" alt="" style="width: 15em; cursor: pointer;">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -49,11 +49,11 @@
                     </div>
                 </nav>
             </div>
-            <div class="container position-relative" style="margin-top: 70px;">
+            <div class="container position-relative sm-principal">
                 <div class="row">
                     <div class="sm-my-name col-12 col-lg-6 px-5 px-md-4 text-center text-md-left" style="margin-top: 70px;">
                         <h1 class="font-weight-normal" style="color: white; font-size: 3em;">Mi nombre es André y soy FrontEnd & Mobile Developer</h1>
-                        <div class="sm-social d-flex justify-content-between">
+                        <div class="sm-social d-flex justify-content-between pt-1">
                             <a href="https://drive.google.com/file/d/1sAxPcz2jw3upt_k8x7-iwOLEAtzIXV7W/view?usp=sharing" target="_blank"><i class="far fa-file"></i></a>
                             <a href="https://github.com/muskops" target="_blank"><i class="fab fa-github"></i></a>
                             <a href="https://www.linkedin.com/in/ibarraandre/" target="_blank"><i class="fab fa-linkedin"></i></a>
