Agregado de más reconocimientos

--- a/index.html
+++ b/index.html
@@ -340,6 +340,26 @@
             <div id="carouselExampleIndicators" class="carousel slide carousel-fade my-4" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
+                        <a href="img/logros/titulo.jpg" data-lightbox="logros" data-title="Titulo ITSM">
+                            <img class="d-block border" src="img/logros/titulo.jpg" height="600px" alt="Titulo ITSM">
+                        </a>
+                    </div>
+                    <div class="carousel-item">
+                        <a href="img/logros/reconocimientoprimerlugargen.jpg" data-lightbox="logros" data-title="Reconocimiento ITSM">
+                            <img class="d-block border" src="img/logros/reconocimientoprimerlugargen.jpg" height="600px" alt="Reconocimiento ITSM">
+                        </a>
+                    </div>
+                    <div class="carousel-item">
+                        <a href="img/logros/reconocimientoprimerlugarcar.jpg" data-lightbox="logros" data-title="Reconocimiento ITSM">
+                            <img class="d-block border" src="img/logros/reconocimientoprimerlugarcar.jpg" height="600px" alt="Reconocimiento ITSM">
+                        </a>
+                    </div>
+                    <div class="carousel-item">
+                        <a href="img/logros/certificadoestudiostec.jpg" data-lightbox="logros" data-title="Reconocimiento ITSM">
+                            <img class="d-block border" src="img/logros/certificadoestudiostec.jpg" height="600px" alt="Reconocimiento ITSM">
+                        </a>
+                    </div>
+                    <div class="carousel-item">
                         <a href="img/logros/reconocimientotec.png" data-lightbox="logros" data-title="Reconocimiento ITSM">
                             <img class="d-block border" src="img/logros/reconocimientotec.png" height="600px" alt="Reconocimiento ITSM">
                         </a>
